--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ h1 {
     text-align: center;
     font-family: serif;
 }
-p {
+#kannsou {
     font-size: 30px;
     color: seagreen;
     text-align: center;
