--- a/style.css
+++ b/style.css
@@ -18,3 +18,36 @@ a {
     color: black;
     text-align:left ;
 }
+nav {
+    width: 100%;
+    height: 70px;
+    background-color: yellowgreen;
+}
+ul {
+    display: flex;
+}
+#menu1 {
+    list-style: none;
+}
+#menu2 {
+    list-style: none;
+}
+#menu3 {
+    list-style: none;
+}
+#menu4 {
+    list-style: none;
+}
+#menu5 {
+    list-style: none;
+}
+a {
+    display: block;
+    text-decoration: none;
+    color: blue;
+    margin-right: 50px;
+    font-family: serif;
+}
+#setumei1 {
+    color: black;
+}
